# load-optimiser

./: .gitignore  README.md  hello.py  lo.http  pyproject.toml
app/: main.py
app/api/: app.py
app/api/routing/binpacking_router/: binpacking_router.py  utils.py
app/schema/: model.py
app/src/: items_packing.py  load_combinations_generator.py
app/src/load_optimiser_core/: __init__.py  auxiliary_methods.c  auxiliary_methods.html  auxiliary_methods.pyx  constants.c  constants.html  constants.pyx  item.c  item.html  item.pyx  main.py
