[project]
name = "load-optimiser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.0.12",
    "fastapi[standard]>=0.115.12",
    "numpy>=2.2.5",
    "polars>=1.29.0",
    "pydantic>=2.11.4",
    "pymongo>=4.12.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.2",
]
